# snpcc

./: .gitignore  .pylintrc  README.md  architecture.txt  ncsnpcc.py  pyproject.toml  setup.py  snpcc.py  todo  todos.md
.vybz/blueprints/: project-modernization-blueprint-src-layout--pyproject.md
.vybz/bugs/: bad-server-startup.py
.vybz/designs/: testing-strategy-vybz-workbench-snpcc.md
snap/: __init__.py  api.py  client.py  curses.py  screen.py  state.py  tui.py
src/: snpcc.py
src/snap/: __init__.py  api.py  client.py  state.py  tui.py
tests/: conftest.py  test_snpcc.py
tests/snap/: test_client.py  test_screen.py
