[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "snpcc"
version = "0.1.0"
description = "Terminal-based user interface for controlling Snapcast servers"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "GPL-2.0-only"}
authors = [
  {name = "snpcc contributors"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console :: Curses",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Sound/Audio",
]
dependencies = [
    "snapcast",
    "click",
    "pyyaml",
]

[project.scripts]
snpcc = "snpcc:cli"

[project.urls]
"Homepage" = "https://github.com/nick-orton/snpcc"

[project.optional-dependencies]
dev = [
    "pylint",
    "black",
    "pytest",
    "pytest-mock",
    "pytest-asyncio"
]

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["snpcc"]

[tool.setuptools.packages.find]
where = ["src"]
[tool.pytest.ini_options] 
testpaths = ["tests"]
# Force pytest to add 'src' to the python path so 'import snap' works
pythonpath = ["src"]
# Configure asyncio behavior
asyncio_mode = "auto"
# Add markers for better organization
markers = [
    "unit: fast hermetic logic tests",
    "integration: tests that touch the (mocked) network layer"
]

[tool.pylint.master]
fail-under = 10.0
ignore = ["CVS"]
jobs = 1

[tool.pylint.messages_control]
disable = [
    "print-statement",
    "parameter-unpacking",
    "unpacking-in-except",
    "old-raise-syntax",
    "backtick",
    "long-suffix",
    "old-ne-operator",
    "old-octal-literal",
    "import-star-module-level",
    "non-ascii-bytes-literal",
    "raw-checker-failed",
    "bad-inline-option",
    "locally-disabled",
    "file-ignored",
    "suppressed-message",
    "useless-suppression",
    "deprecated-pragma",
    "use-symbolic-message-instead",
    "apply-builtin",
    "basestring-builtin",
    "buffer-builtin",
    "cmp-builtin",
    "coerce-builtin",
    "execfile-builtin",
    "file-builtin",
    "long-builtin",
    "raw_input-builtin",
    "reduce-builtin",
    "standarderror-builtin",
    "unicode-builtin",
    "xrange-builtin",
    "coerce-method",
    "delslice-method",
    "getslice-method",
    "setslice-method",
    "no-absolute-import",
    "old-division",
    "dict-iter-method",
    "dict-view-method",
    "next-method-called",
    "metaclass-assignment",
    "indexing-exception",
    "raising-string",
    "reload-builtin",
    "oct-method",
    "hex-method",
    "nonzero-method",
    "cmp-method",
    "input-builtin",
    "round-builtin",
    "intern-builtin",
    "unichr-builtin",
    "map-builtin-not-iterating",
    "zip-builtin-not-iterating",
    "range-builtin-not-iterating",
    "filter-builtin-not-iterating",
    "using-cmp-argument",
    "eq-without-hash",
    "div-method",
    "idiv-method",
    "rdiv-method",
    "exception-message-attribute",
    "invalid-str-codec",
    "sys-max-int",
    "bad-python3-import",
    "deprecated-string-function",
    "deprecated-str-translate-call",
    "deprecated-itertools-function",
    "deprecated-types-field",
    "next-method-defined",
    "dict-items-not-iterating",
    "dict-keys-not-iterating",
    "dict-values-not-iterating",
    "deprecated-operator-function",
    "deprecated-urllib-function",
    "xreadlines-attribute",
    "deprecated-sys-function",
    "exception-escape",
    "comprehension-escape",
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring"
]

[tool.pylint.format]
max-line-length = 100

